k8s/04-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: todo-app-deployment
    namespace: todo-production
spec:
    replicas: 2 
    selector:
      matchLabels:
        app: todo-app
    template:
      metadata:
        labels:
          app: todo-app
      spec:     
        containers:
        - name: todo-app
          image: todo-app-v2:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 5000
