k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: todo-app-service
    namespace: todo-production
spec:
    type: LoadBalancer
    ports: 
    - port: 80
      targetPort: 5000
    selector:
        app: todo-app
